pkg/lang/syntax/testdata/ub/validate/invalid/stack/state-body-meta-key.ub
stack: {
  state: local {
    @backend: local
  }
  encryption: noop {}
}
